written 90% of model tests, refactored, tidied and stubbed two helper methods, updated build script, moved to direct injection over module imports

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A SQLite3 REST API",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha -path ./lib -name *.spec.js",
+    "test": "node_modules/.bin/mocha -path ./sneaker -name *.spec.js",
     "make:database": "node scripts/make-database.js",
     "make:migration": "node scripts/make-migration.js",
     "make:seeder": "node scripts/make-seeder.js",
@@ -15,12 +15,13 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "sql.js": "^0.4.0"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "mocha": "^3.2.0",
-    "rewire": "^2.5.2",
     "sinon": "^1.17.7"
   }
 }
